names: fix input color in dark mode

--- a/x/assets/names/index.css
+++ b/x/assets/names/index.css
@@ -31,6 +31,7 @@ input,
 button,
 table {
   font: inherit;
+  color: inherit;
 }
 hr {
   display: none;
